--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "di-linker": "^2.1.4",
+    "ejs": "^2.5.6",
     "express": "^4.15.3"
   },
   "devDependencies": {
