--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "di-linker": "^2.1.4",
     "ejs": "^2.5.6",
-    "express": "^4.15.3"
+    "express": "^4.15.3",
+    "mongoose": "^4.11.3"
   },
   "devDependencies": {
     "grunt": "^1.0.1",
