--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "author": "thaopv",
   "license": "MIT",
   "dependencies": {
+    "bluebird": "^3.5.0",
+    "body-parser": "^1.17.2",
+    "cookie-parser": "^1.4.3",
     "di-linker": "^2.1.4",
     "ejs": "^2.5.6",
     "express": "^4.15.3",
