--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "di-linker": "^2.1.4",
     "ejs": "^2.5.6",
     "express": "^4.15.3",
-    "mongoose": "^4.13.12"
+    "mongoose": "^4.13.12",
+    "nconf": "^0.10.0"
   },
   "devDependencies": {
     "grunt": "^1.0.1",
